@@ -1105,6 +1105,7 @@ nuttx-0.3.15 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add a FIOC_MMAP to perform memory mapping of a file and implemented the
 	  ioctl command in the ROMFS filesystem.  This is a requirement for eXecute
 	  In Place (XIP) support.
+	* Add mmap() API with restricted capability (only for XIP support)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
