@@ -471,5 +471,6 @@
 	* Add a FIOC_MMAP to perform memory mapping of a file and implemented the
 	  ioctl command in the ROMFS filesystem.  This is a requirement for eXecute
 	  In Place (XIP) support.
+	* Add mmap() API with restricted capability (only for XIP support)
 
 
